[package]
name = "wayland-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
gio = "0.17.9"
glib = "0.17.9"
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_8"] }
gtk4-layer-shell = "0.0.3"
